<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PPAndroid</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_controller">ControllerActivity</string>
    <string name="placeholder">&lt;placeholder></string>
    <string name="refresh">Refresh</string>
    <string name="alias">Alias:</string>
    <string name="aliasHint">enter your name</string>
    <string name="connectManually">Connect manually</string>
    <string name="ip">IP address</string>
    <string name="port">Port</string>
    <string name="availableServers">Available servers</string>
    <string name="manualConnection">Manual connection</string>
    <string name="title_activity_manual_connection">ManualConnectionActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="connect">Connect</string>
    <string name="noServers">Alternatively, you can</string>
    <string name="problems">Having problems?</string>
    <string name="refreshing">Refreshing list...</string>

</resources>
