<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    tools:context=".MainActivity" >

    <LinearLayout
        android:id="@+id/listHeaderLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/serversLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/refreshing"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <ProgressBar
            android:id="@+id/refreshingIndicator"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="0.5" />

        <Button
            android:id="@+id/refreshButton"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:onClick="refreshServerList"
            android:text="@string/refresh" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/listLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/aliasLayout"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/listHeaderLayout"
        android:orientation="vertical" >

        <ListView
            android:id="@+id/serverListView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp" >
        </ListView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/bottomLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="10dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/problems"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Button
            android:id="@+id/button1"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="connectManually"
            android:text="@string/connectManually" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/aliasLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/bottomLayout"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:focusable="true" 
        android:focusableInTouchMode="true" >

        <TextView
            android:id="@+id/aliasLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alias"
            android:textAppearance="@android:style/TextAppearance.Medium" />

        <EditText
            android:id="@+id/aliasField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:hint="@string/aliasHint" >
        </EditText>
    </LinearLayout>

</RelativeLayout>